@@ -22,6 +22,7 @@ The following bugs have been fixed in the 1.5.6 release.
 K  8398	MailSessionDefinition should use the Repeatable annotation for Java EE 8
 K  8399	IdleManager fails on Android
 K  8403	Test fails: javax.mail.internet.GetLocalAddressTest
+K  8405	MboxFolder.expunge can corrupt mailbox file
 
 
 		  CHANGES IN THE 1.5.6 RELEASE
